MP-2701: code fixed for white-spacing issue with header some pages.

--- a/ui.frontend/src/main/webpack/components/content/core-header/v1/header/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-header/v1/header/style.scss
@@ -214,6 +214,10 @@
     display: block;
   }
 }
+#sl-dropdown-language-utility .dropdown-menu .dropdown-menu-title,
+#sl-dropdown-language-utility .dropdown-menu .dropdown-item {
+    white-space: nowrap;
+}
 .sl-divider{
 .hr {
   border-top: .063rem solid;
